--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "aws-sdk": "^2.4.0",
     "body-parser": "^1.15.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "helmet": "^2.1.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
